--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Pedro-costa99.github.io/redemption-app",
-  "name": "redemption-app",
+  "homepage": "https://Pedro-costa99.github.io/interface-apdata",
+  "name": "interface-apdata",
   "private": true,
   "author": "Pedro Canabrava",
   "version": "0.0.0",
@@ -25,6 +25,7 @@
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0",
     "sass": "^1.85.1",
     "yup": "^1.6.1"
   },
